[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ChatLark"
dynamic = ["version"]
description = "Placeholder package for future ChatArch Lark tooling."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["click>=8.0", "chatstyle>=0.1.0,<0.2.0", "chatenv>=0.2.0,<0.3.0"]
authors = [{name = "ChatArch", email = "noreply@chatarch.org"}]
keywords = ["chatlark", "chatarch", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ChatArch/ChatLark"
Repository = "https://github.com/ChatArch/ChatLark"

[project.scripts]
chatlark = "chatlark.cli:main"

[project.optional-dependencies]
dev = ["build", "pytest", "twine"]

[tool.setuptools.dynamic]
version = {attr = "chatlark.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true
